--- a/search.html
+++ b/search.html
@@ -1,12 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <!--
-프로그램명 : 검색 기능 
+프로그램명 : 검색
 작성자 : 이준재
-작성일 : 2020-06-12
+작성일 : 2020-06-19
 팀명 : 파이썬클라스 (4조)
-프로그램 설명: 검색 기능 웹사이트 적용 코드
+프로그램 설명: 기존 검색기능에 검색필터기능 추가
 -->
 <form class="form-inline my-2 my-lg-0" method='GET' action = "{% url 'search' %}" >
-  <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" name='b' value="{{b}}">
-  <button class="btn btn-outline-light my-2 my-sm-0" type="submit" value="{{b}}">Search</button>
-</form>
+    <label class="my-1 mr-2"  for="inlineFormCustomSelectPref"></label>
+    <select class="custom-select my-1 mr-sm-2" name='gender' value="{{gender}}" id="inlineFormCustomSelectPref">
+      <option selected>전체</option>
+      <option value="남자">남자</option>
+      <option value="여자">여자</option>
+    </select>
+    <label class="my-1 mr-2" for="inlineFormCustomSelectPref"></label>
+    <select class="custom-select my-1 mr-sm-2" name='clothes_type' value="{{clothes_type}}" id="inlineFormCustomSelectPref">
+      <option selected>전체</option>
+      <option value="아우터">아우터</option>
+      <option value="상의">상의</option>
+      <option value="하의">하의</option>
+    </select>
+    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" name='sdata' value="{{sdata}}">
+    <button class="btn btn-outline-light my-2 my-sm-0" type="submit" value="{{sdata}}">Search</button>
+  </form>
